deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llamaforge
  labels:
    name: llamaforge
